--- a/public/rest/css/superfish.css
+++ b/public/rest/css/superfish.css
@@ -4,6 +4,7 @@
 	position: relative;
 	float: right;
 	padding-top: 44px;
+	padding-bottom: 10px;
 	
 }
 
@@ -40,7 +41,7 @@ nav {
 
 .sf-menu>li {
 	position: relative;
-	font-size: 20px;
+	font-size: 18px;
 	float: left;
 	line-height: 22px;
 	-moz-box-sizing: border-box;
